--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 </head>
 
 <body>
-    <section class="half-width">
-        <div>
+    <section>
+        <div class="half-width">
             <h1>Welcom To</h1>
             <h1><span class="orange-color">Tarik Aziz's</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development Hero.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.google.com/search?gs_ssp=eJzj4tLP1TfIyK1MKy5TYDRgdGDw4khLTE5Nys_PBgBmYAfL&q=facebook&rlz=1C1GCEU_enBD937BD937&oq=fa&aqs=chrome.1.69i60j46i39i199i291j69i57j0i131i433j0i131i433i512l2j69i60l2.2399j0j7&sourceid=chrome&ie=UTF-8">HIRE
+                ME</a>
         </div>
 
         <div class="half-width">
