--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcom To</h1>
             <h1><span class="orange-color">Tarik Aziz's</span> World</h1>
@@ -30,6 +30,44 @@
             <img src="images/my-bg.png" alt="my image">
         </div>
     </section>
+    <section class="mid-banner flexible-container">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="jhanker-img">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web develope</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="blank" href="https://www.youtube.com/">Go To Youtube</a>
+        </div>
+    </section>
+
+
+    <section class="experience">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack-web-dev" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web-dev" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 
 </html>
